First working version

--- a/dev/index.html
+++ b/dev/index.html
@@ -3,20 +3,55 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>&lt;my-element> Demo</title>
+    <title>&lt;university-date-calendar> Demo</title>
     <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
     <script src="../node_modules/lit/polyfill-support.js"></script>
-    <script type="module" src="../my-element.js"></script>
-    <style>
-      p {
-        border: solid 1px blue;
-        padding: 8px;
-      }
-    </style>
+    <script type="module" src="../university-date-calendar.js"></script>
   </head>
   <body>
-    <my-element>
-      <p>This is child content</p>
-    </my-element>
+    <div class="navPaletteTitle">
+      <p style="font-size:small">Note: title attribute of the courseMenu_link element contains value for current period</p>
+      <h3><a href="#" role="button" aria-expanded="true" class="comboLink" aria-controls="courseMenuPalette_contents"
+          title="Collapse 1031LAW_3205  Foundations of Law (1031LAW_3205)" id="courseMenu_link">1031LAW_3205 Foundations of Law (1031LAW)  
+          <!-- title="Collapse COM14_2213_OT Creative and Professional writing (COM14_2213_OT)" id="courseMenu_link">Creative and Professional writing (COM14_2213_OT)  -->
+          <!-- title="Collapse 1031LAW_3205  Foundations of Law (1031LAW_3205_GC)" id="courseMenu_link">Foundations of Law (1031LAW_3205_GC)  -->
+          <!-- title="Collapse 1511QCM Music Theory 1 (1511QCM_3211_SB)" id="courseMenu_link">1511QCM Music Theory 1 (1511QCM_3211_SB) -->
+          </a>
+          </h3> 
+      <h3><a href="/webapps/blackboard/execute/courseMain?course_id=_88562_1" target="" class="submenuLink"
+          id="courseMenu_combo" title="Go to Course Entry Page">
+            </a></h3>
+    </div>
+
+    <h3>About</h3>
+
+    <p>Test the university-date-calendar singleton web component, but not by 
+      embedding it.
+    </p>
+    <button id="showCurrent">Show Current Period</button>
+    <p>Current period is <span id="current"></span></p>
+    <p>Enter week number (1-12) to show start/stop <input id="week" type="text" /></p>
+    <p>Period 3201 Week <span id="weekValue">n/a</span> starts <span id="start">n/a</span> stops <span id="stop">n/a</span></p>
+
+    <script async defer>
+      document.getElementById('showCurrent').addEventListener('click', (e) => {
+        const broker = window.UniversityDateCalendarBroker.requestAvailability();
+        document.getElementById('current').innerHTML = broker.getCurrentPeriod();
+      });
+
+      document.getElementById('week').addEventListener('input', (e) => {
+        const broker = window.UniversityDateCalendarBroker.requestAvailability();
+        const details = broker.getWeekDetails( "3201", e.target.value );
+        document.getElementById('weekValue').innerHTML = e.target.value;
+        if ( details !== null ) {
+          document.getElementById('start').innerHTML = details.start;
+          document.getElementById('stop').innerHTML = details.stop;
+        } else {
+          document.getElementById('start').innerHTML = "not available";
+          document.getElementById('stop').innerHTML = "not available";
+        }
+      })
+
+    </script> 
   </body>
 </html>
