--- a/dev/index.html
+++ b/dev/index.html
@@ -12,15 +12,13 @@
     <div class="navPaletteTitle">
       <p style="font-size:small">Note: title attribute of the courseMenu_link element contains value for current period</p>
       <h3><a href="#" role="button" aria-expanded="true" class="comboLink" aria-controls="courseMenuPalette_contents"
-          title="Collapse 1031LAW_3205  Foundations of Law (1031LAW_3205)" id="courseMenu_link">1031LAW_3205 Foundations of Law (1031LAW)  
+             title="Collapse David Jones Sandpit (DJ_Sandpit" id="courseMenu_link">David Jones Sandpit (DJ_Sandpit) 
+<!--          title="Collapse 1031LAW_3205  Foundations of Law (1031LAW_3205)" id="courseMenu_link">1031LAW_3205 Foundations of Law (1031LAW)    -->
           <!-- title="Collapse COM14_2213_OT Creative and Professional writing (COM14_2213_OT)" id="courseMenu_link">Creative and Professional writing (COM14_2213_OT)  -->
           <!-- title="Collapse 1031LAW_3205  Foundations of Law (1031LAW_3205_GC)" id="courseMenu_link">Foundations of Law (1031LAW_3205_GC)  -->
           <!-- title="Collapse 1511QCM Music Theory 1 (1511QCM_3211_SB)" id="courseMenu_link">1511QCM Music Theory 1 (1511QCM_3211_SB) -->
           </a>
           </h3> 
-      <h3><a href="/webapps/blackboard/execute/courseMain?course_id=_88562_1" target="" class="submenuLink"
-          id="courseMenu_combo" title="Go to Course Entry Page">
-            </a></h3>
     </div>
 
     <h3>About</h3>
@@ -30,10 +28,10 @@
     </p>
     <button id="showCurrent">Show Current Period</button>
     <p>Current period is <span id="current"></span></p>
-    <p>Enter week number (1-12) to show start/stop <input id="week" type="text" /></p>
-    <p>Period 3201 Week <span id="weekValue">n/a</span> starts <span id="start">n/a</span> stops <span id="stop">n/a</span></p>
+    <p>Enter week number (1-12) to show start/stop for current period (as per title above) <input id="week" type="text" /></p>
+    <p>Current period is <span id="longCurrent">n/a</span> Week <span id="weekValue">n/a</span> starts <span id="start">n/a</span> stops <span id="stop">n/a</span></p>
 
-    <script async defer>
+    <script>
       document.getElementById('showCurrent').addEventListener('click', (e) => {
         const broker = window.UniversityDateCalendarBroker.requestAvailability();
         document.getElementById('current').innerHTML = broker.getCurrentPeriod();
@@ -41,7 +39,9 @@
 
       document.getElementById('week').addEventListener('input', (e) => {
         const broker = window.UniversityDateCalendarBroker.requestAvailability();
-        const details = broker.getWeekDetails( "3201", e.target.value );
+        const currentPeriod = broker.getCurrentPeriod();
+        document.getElementById('longCurrent').innerHTML = currentPeriod;
+        const details = broker.getWeekDetails( currentPeriod, e.target.value );
         document.getElementById('weekValue').innerHTML = e.target.value;
         if ( details !== null ) {
           document.getElementById('start').innerHTML = details.start;
